--- a/start/index.html
+++ b/start/index.html
@@ -12,7 +12,7 @@
     <div id="container">
       <input type="button" value="Clicca per scegliere un titolo" onclick="scegliUnTitolo()" />
 
-      <h1>Titolo</h1>
+      <h1 id="titologiusto">Titolo</h1>
     </div>
     <script src="./js/primoscript.js"></script>
   </body>
