--- a/start/index.html
+++ b/start/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="container">
-      <input type="button" value="Clicca per scegliere un titolo" onclick="scegliUnTitolo()" />
+      <input type="button" value="Clicca per scegliere un titolo decente" onclick="scegliUnTitolo()" />
 
       <h1 id="titologiusto">Titolo</h1>
     </div>
